# retail_sales_platform

./: .gitignore  DB_Creation.sql  README.md  docker-compose.yaml  main.py  pyproject.toml  staging_tables.sql
config/: airflow.cfg
dags/: retail_sales_pipeline.py
dashboard/: app.py
retail_sales_platform_kaggel/: dbt_project.yml  profiles.yml
retail_sales_platform_kaggel/macros/: utils.sql
retail_sales_platform_kaggel/models/bronze/: bronze_customers.sql  bronze_order_items.sql  bronze_order_reviews.sql  bronze_orders.sql  bronze_payments.sql  bronze_product_category_translation.sql  bronze_products.sql  bronze_sellers.sql
retail_sales_platform_kaggel/models/gold/obt/: obt_orders.sql
retail_sales_platform_kaggel/models/gold/star_schema/: dim_customers.sql  dim_payments.sql  dim_products.sql  dim_sellers.sql  fact_orders.sql  properties.yml
retail_sales_platform_kaggel/models/silver/: silver_customers.sql  silver_order_items.sql  silver_order_reviews.sql  silver_orders.sql  silver_payments.sql  silver_products.sql  silver_sellers.sql
retail_sales_platform_kaggel/models/sources/: sources.yml
retail_sales_platform_kaggel/tests/: test_late_delivery_rate.sql  test_no_negative_revenue.sql
scripts/: load_to_staging.py
